--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: flutterappweb
-description: A new Flutter application.
+name: SUNMAX
+description: Flutter application to monitor work of solar power plants.
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   provider: ^4.0.4
   http: ^0.12.0+4
+  charts_flutter: ^0.9.0
 
 dev_dependencies:
   flutter_test:
@@ -44,9 +45,6 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-#    - assets/images/accumulator.png
-#    - assets/images/panels.png
-#    - assets/images/grid.png
     - assets/images/
     - assets/images/switch/
 
