--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   provider: ^4.0.4
   http: ^0.12.0+4
-  charts_flutter: ^0.9.0
+  syncfusion_flutter_charts: ^18.1.52
 
 dev_dependencies:
   flutter_test:
