--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   provider: ^4.0.4
   http: ^0.12.0+4
   syncfusion_flutter_charts: ^18.1.52
+  timer_builder: ^1.3.0
 
 dev_dependencies:
   flutter_test:
